# Ravenna

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md  cpu_probe.sbatch  generateQuery.sh  run_batch_array.sh  run_multi_embedding.sh  run_multi_full.sh  submit_all_cpu_probe.sh
build1/: CMakeCache.txt  Makefile  cmake_install.cmake  compile_commands.json
build1/graph/: Makefile  cmake_install.cmake
build1/matching/: EdgeListConverter.out  GraphConverter.out  Makefile  QueryGen.out  ReassignLabel  Relabel  SelectEdge  cmake_install.cmake
build1/utility/: Makefile  cmake_install.cmake
build1/utility/execution_tree/: Makefile  cmake_install.cmake
build1/utility/nucleus_decomposition/: Makefile  cmake_install.cmake
case_study/query_graph/: query_G_24_1.graph
datasets/original/query_graph/dblp/: query_G_24_1.graph  query_G_24_10.graph  query_G_24_100.graph  query_G_24_101.graph  query_G_24_102.graph  query_G_24_103.graph  query_G_24_104.graph  query_G_24_105.graph  query_G_24_106.graph  query_G_24_107.graph  query_G_24_108.graph  query_G_24_109.graph  query_G_24_11.graph  query_G_24_110.graph  query_G_24_111.graph  (+385 more)
matching/: BuildTable.cpp  CMakeLists.txt  CreateRevGraphs.py  CreateRevGraphs.py.save  EvaluateQuery.cpp  EvaluateQuery.h  Ganalysis.py  GenerateQuery.cpp  GenerateQuery.h  MatchCover.cpp  MatchCover.h  QueryGenMain.cpp  Relabel.cpp  StudyPerformance.cpp  matchingcommand.cpp  matchingcommand.h
runscripts/: cpu_probe.sbatch  generateQuery.sh  run_batch_array.sh  run_multi_embedding.sh  run_multi_full.sh  submit_all_cpu_probe.sh
(+18 files in other folders)
